--- a/snippets/feature-product-card.liquid
+++ b/snippets/feature-product-card.liquid
@@ -2,7 +2,7 @@
 
   <div class="feature-product__media-container feature-hover-effect-{{product_card.id}}">
 
-    <img class="feature-product__media-img"
+    <img class="feature-product__media-img img-aspect-ratio-{{ aspect-ratio }}"
       srcset="{%- if product_card.featured_media.width >= 165 -%}{{ product_card.featured_media | img_url: '165x' }} 165w,{%- endif -%}
       {%- if product_card.featured_media.width >= 360 -%}{{ product_card.featured_media | img_url: '360x' }} 360w,{%- endif -%}
       {%- if product_card.featured_media.width >= 533 -%}{{ product_card.featured_media | img_url: '533x' }} 533w,{%- endif -%}
