--- a/snippets/feature-product-card.liquid
+++ b/snippets/feature-product-card.liquid
@@ -2,13 +2,22 @@
 
   <div class="feature-product__media-container feature-hover-effect-{{product_card.id}}">
 
-    <img class="feature-product__media-img img-aspect-ratio-{{ aspect-ratio }}"
-      srcset="{%- if product_card.featured_media.width >= 165 -%}{{ product_card.featured_media | img_url: '165x' }} 165w,{%- endif -%}
-      {%- if product_card.featured_media.width >= 360 -%}{{ product_card.featured_media | img_url: '360x' }} 360w,{%- endif -%}
-      {%- if product_card.featured_media.width >= 533 -%}{{ product_card.featured_media | img_url: '533x' }} 533w,{%- endif -%}
-      {%- if product_card.featured_media.width >= 720 -%}{{ product_card.featured_media | img_url: '720x' }} 720w,{%- endif -%}
-      {%- if product_card.featured_media.width >= 940 -%}{{ product_card.featured_media | img_url: '940x' }} 940w,{%- endif -%}
-      {%- if product_card.featured_media.width >= 1066 -%}{{ product_card.featured_media | img_url: '1066x' }} 1066w{%- endif -%}"
+    <img class="feature-product__media-img format-image-{{ image-format }}-{{ product_card.id }} img-aspect-ratio-{{ aspect-ratio }}"
+      {% if custom-image == nil %}
+        srcset="{%- if product_card.featured_media.width >= 165 -%}{{ product_card.featured_media | img_url: '165x' }} 165w,{%- endif -%}
+        {%- if product_card.featured_media.width >= 360 -%}{{ product_card.featured_media | img_url: '360x' }} 360w,{%- endif -%}
+        {%- if product_card.featured_media.width >= 533 -%}{{ product_card.featured_media | img_url: '533x' }} 533w,{%- endif -%}
+        {%- if product_card.featured_media.width >= 720 -%}{{ product_card.featured_media | img_url: '720x' }} 720w,{%- endif -%}
+        {%- if product_card.featured_media.width >= 940 -%}{{ product_card.featured_media | img_url: '940x' }} 940w,{%- endif -%}
+        {%- if product_card.featured_media.width >= 1066 -%}{{ product_card.featured_media | img_url: '1066x' }} 1066w{%- endif -%}"
+      {% else %}
+        srcset="{%- if custom-image.width >= 165 -%}{{ custom-image | img_url: '165x' }} 165w,{%- endif -%}
+      {%- if custom-image.width >= 360 -%}{{ custom-image | img_url: '360x' }} 360w,{%- endif -%}
+      {%- if custom-image.width >= 533 -%}{{ custom-image | img_url: '533x' }} 533w,{%- endif -%}
+      {%- if custom-image.width >= 720 -%}{{ custom-image | img_url: '720x' }} 720w,{%- endif -%}
+      {%- if custom-image.width >= 940 -%}{{ custom-image | img_url: '940x' }} 940w,{%- endif -%}
+      {%- if custom-image.width >= 1066 -%}{{ custom-image | img_url: '1066x' }} 1066w{%- endif -%}"
+      {% endif %}
       src="
       {% if custom-image != nil %}{{ custom-image | img_url: '533x' }} {% else %} {{ product_card.featured_media | img_url: '533x' }} {% endif %}"
       alt="{{ product_card.featured_media.alt | escape }}"
@@ -16,6 +25,14 @@
       >
   </div>
   
+  {% style %}
+    .format-image-cover-{{product_card.id}} {
+      object-fit: cover;
+    }
+    .format-image-contain-{{product_card.id}} {
+      object-fit: contain;
+    }
+  {% endstyle %}
 
   <div class="feature-product__description">
     <div class="feature-product__title">{{ product_card.title }}</div>
