added hover video feature

--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -27,6 +27,8 @@
   </ul>
 </div>
 
+<script src="{{ 'feature-clip.js' | asset_url }}" defer="defer"></script>
+
 {% schema %}
 {
   "name": "Featured products",
