--- a/assets/featured-products.css
+++ b/assets/featured-products.css
@@ -4,10 +4,27 @@
   list-style: none;
   padding: 0;
 }
+.feature-product__media-container {
+  position: relative;
+}
+.feature-product__media-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity .4s cubic-bezier(.25,.46,.45,.94);
+}
+.feature-product__media-video > video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .feature-product__button-link {
   color: black;
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   width: 100%;
   display: block;
   border: 1px solid black;
