--- a/snippets/feature-product-card.liquid
+++ b/snippets/feature-product-card.liquid
@@ -84,7 +84,7 @@
       {% if product_card.variants.size > 1 %}
         <quick-add-modal-opener>
           <button class="feature-product__button-modal">
-            Choose Options
+            {{ 'sections.featured_products.choose_options' | t }}
           </button>
           <div class="quick-add-modal">
             <div class="quick-add-modal__content">
