--- a/snippets/feature-product-card.liquid
+++ b/snippets/feature-product-card.liquid
@@ -117,6 +117,7 @@
                     <quick-add-form>
                       {%- form 'product', product_card, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
                         <input type="hidden" name="id" class="product-variant"  value="{{ product_card.selected_or_first_available_variant.id }}">
+                        <input id="quick-add" type="hidden" name="properties[_Quick Add]" value="Quick Add">
                         <div class="quick-product-options">
                             {% for option in product_card.options_with_values %}
                               <label>{{ option.name }}</label>
@@ -166,6 +167,7 @@
         <quick-add-form>
           {%- form 'product', product_card, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
             <input type="hidden" name="id" value="{{ product_card.selected_or_first_available_variant.id }}">
+            <input id="quick-add" type="hidden" name="properties[_Quick Add]" value="Quick Add">
             <button
               type="submit"
               name="add"
